--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "AC APOD"
 include ':app'
+include ':data'
+include ':domain'
+include ':usecases'
