--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ android {
 
 dependencies {
 
+    implementation project(":domain")
+    implementation project(":data")
+    implementation project(":usecases")
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
