--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,14 @@ dependencies {
 
     // Room
     implementation 'androidx.room:room-ktx:2.4.0'
-    kapt "androidx.room:room-compiler:2.4.0"
+    kapt 'androidx.room:room-compiler:2.4.0'
+
+    // HTTP
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
